Realizamos página de ingresar y retirar, agregar cuenta e inicio

--- a/src/app/shared/sidebar/sidebar.component.css
+++ b/src/app/shared/sidebar/sidebar.component.css
@@ -41,13 +41,12 @@
 
 .logopil{
   height: 45px;
-  margin-left: 70px;
+  margin-left: 150px;
   top:5px;
   margin-bottom: 5px;
   width: auto;
-  position: absolute;
+  position: fixed;
   z-index: 1;
- 
 }
 
 .titulo-money{
