--- a/src/app/wallet/pages/inicio/inicio.component.css
+++ b/src/app/wallet/pages/inicio/inicio.component.css
@@ -1,64 +1,52 @@
 
   .principio{
-  margin-top: 50px;
-  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
   margin-left: 50px;
-  font-size: 35px;
+  justify-content: space-between;
   color: #5e35b1;
+  margin-bottom: 10px;
+  margin-top: -300px;
+  font-size: 13px;
   }
-
-  .cuenta{
-    width: 140px;
-    height: 40px;
-    background-color: white;
-    margin-left: 800px;
-    margin-bottom: 20px;
-    margin-top: -60px;
-    color: #5e35b1;
-    padding-top: 8px;
-    padding-left: 7px;
-    border-radius: 4px;
-    
-  }
-
-  .v1 {
-    border-left: 2px solid #5e35b1;
-    height: 40px;
-    margin-left: 900px;
-    position: relative;
-    bottom: 60px;
-  }
-
- .arrow-up{
-   width: 0px;
-   height: 0px;
-   border-left: 10px solid transparent  ;
-   border-right: 10px solid transparent  ;
-   border-top: 10px solid #5e35b1;
-   position: relative;
-   bottom: 83px;
-   left: 911px;
-    }
 
 .bienvenidos {
   font-size: 25px;
   color: white;
   position:absolute;
   bottom: 30px;
-  margin-left: 220px;
+  margin-left: 480px;
   z-index: 1;
-}
+ }
 
+ mat-form-field{
+   position: relative;
+   bottom: 10px;
+   margin-right: 50px;
+ }
+
+ .pil-m{
+   font-weight: bold;
+   position: relative;
+   bottom: 17px;
+ }
 
 .texto-violeta{
   color: #5e35b1;
+ 
+}
+
+.card2{
+  position: relative;
+top: 70px;
 }
 
 .tamano{
-  width:900px;
+  width:1425px;
   background-image: cover;
   height: 300px;
   overflow:hidden;
+  
 }
 
 .imagen1{
