Terminé la sección de preguntas agregando como ingresar y retirar dinero

--- a/src/app/wallet/pages/preguntas/preguntas.component.html
+++ b/src/app/wallet/pages/preguntas/preguntas.component.html
@@ -77,6 +77,26 @@
             </mat-panel-description>
           </mat-expansion-panel-header>
         <!-- ingresar y retirar dinero sub -->
+
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Ingresar dinero
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>Podés ingresar dinero a tu cuenta desde cualquier otra billetera o banco usando el CVU o alias de tu cuenta PIL para transferirlo.</p>
+            <p>Encontrarás el CVU y alias de tu cuenta en la sección "Mi cuenta".</p>
+          </mat-expansion-panel>
+
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Retirar dinero
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>Podés retirar el dinero de tu cuenta enviándolo a otra cuenta en la sección "Ingresar y retirar". Allí podrás elegir desde qué cuenta enviarás el dinero y el destino.</p>
+          </mat-expansion-panel>
+
       </mat-expansion-panel>
 
 
