--- a/Frontend/src/app/wallet/pages/agregar-cuenta/agregar-cuenta.component.css
+++ b/Frontend/src/app/wallet/pages/agregar-cuenta/agregar-cuenta.component.css
@@ -36,7 +36,8 @@ p {
     color: white;
     font-size: 20px;
     margin-top: 25px;
-    width: 10%;
-    margin-left: 700px;
+    width: 150px;
+    margin-left: 70%;
+    position:relative;
 }
 
