--- a/Frontend/src/app/wallet/pages/sugerencias/sugerencias.component.html
+++ b/Frontend/src/app/wallet/pages/sugerencias/sugerencias.component.html
@@ -1,5 +1,7 @@
 <h2 class="sugerencias">Sugerencias</h2>
-<h4><mat-icon>lock</mat-icon> Se recomienda crear contraseñas seguras.</h4>
+<h4>
+  <mat-icon>lock</mat-icon> Se recomienda crear contraseñas seguras.
+</h4>
 <h4>
   <mat-icon>vpn_lock</mat-icon> Es importante que tu dispositivo cuente con un
   antivirus que detecte algun malware o codigo malicioso.
