--- a/Frontend/src/app/wallet/pages/contactos/contactos.component.html
+++ b/Frontend/src/app/wallet/pages/contactos/contactos.component.html
@@ -1,9 +1,11 @@
 <h2 id="contactate">Contactate con nosotros</h2>
-<h4><mat-icon>phone</mat-icon> Teléfono: +54 351234567</h4>
+<h4>
+  <mat-icon>phone</mat-icon> Teléfono: +54 351234567
+</h4>
 <h4>
   <mat-icon>mail</mat-icon> E-mail: pilmoney@gmail.com
 </h4>
 <h2 class="fb">También podes comunicarte por nuestro Facebook</h2>
 <h2 class="fb">
-    <mat-icon>facebook</mat-icon> PIL Money
+  <mat-icon>facebook</mat-icon> PIL Money
 </h2>
