--- a/Frontend/src/app/wallet/pages/contrasenia/contrasenia.component.html
+++ b/Frontend/src/app/wallet/pages/contrasenia/contrasenia.component.html
@@ -1,30 +1,15 @@
 <div class="container password-container">
   <h3>Ingresá tu Contraseña Actual</h3>
   <mat-form-field appearance="fill" floatLabel="always">
-    <input
-      matInput
-      type="password"
-      class="example-right-align"
-      placeholder="Contraseña"
-    />
+    <input matInput type="password" class="example-right-align" placeholder="Contraseña" />
   </mat-form-field>
   <h3>Ingresá tu nueva Contraseña</h3>
   <mat-form-field appearance="fill" floatLabel="always">
-    <input
-      matInput
-      type="password"
-      class="example-right-align"
-      placeholder="Contraseña"
-    />
+    <input matInput type="password" class="example-right-align" placeholder="Contraseña" />
   </mat-form-field>
   <h3>Repetí tu nueva contraseña</h3>
   <mat-form-field appearance="fill" floatLabel="always">
-    <input
-      matInput
-      type="password"
-      class="example-right-align"
-      placeholder="Contraseña"
-    />
+    <input matInput type="password" class="example-right-align" placeholder="Contraseña" />
   </mat-form-field>
   <button mat-flat-button class="confirmar">Confirmar</button>
 </div>
