--- a/Frontend/src/app/wallet/pages/transferencia/transferencia.component.css
+++ b/Frontend/src/app/wallet/pages/transferencia/transferencia.component.css
@@ -1,30 +1,42 @@
 table {
-    width: 200%;
+    width: 100%;
 }
 
 .agendaTitulo {
+    position: relative;
     text-align: center;
     color: var(--violeta);
     font-weight: 600;
-    margin-bottom: 70px;
+    margin-bottom: 5%;
 }
 
-
-.table-container {
+.main-container {
     display: flex;
     height: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
+
+.table-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 10%;
+}
+
 .mat-row .mat-cell {
     border-bottom: 1px solid transparent;
     border-top: 1px solid currentColor;
     cursor: pointer;
 }
+
 .mat-row:hover .mat-cell {
     background-color: var(--blanco);
 }
+
 .botonConfirmar {
     height: 35px;
     background-color: var(--verde);
@@ -32,10 +44,6 @@ table {
     color: white;
     font-size: 23px;
     margin-top: 25px;
-}
-
-.tabla {
-    padding-right: 250px;
 }
 
 p {
@@ -57,6 +65,7 @@ p {
     align-items: center;
     height: 100%;
 }
+
 .col-sm-6 {
     display: flex;
     flex-direction: column;
@@ -73,8 +82,7 @@ p {
 }
 
 .botonSiguiente {
-    margin-top: 100px;
+    margin-top: 5%;
     font-weight: 600;
     width: 50%;
-
 }
