--- a/Frontend/src/app/wallet/pages/mis-datos/mis-datos.component.html
+++ b/Frontend/src/app/wallet/pages/mis-datos/mis-datos.component.html
@@ -1,27 +1,32 @@
-<h2 id="datos">Mis datos personales</h2>
+<h2 id="titulo">Mis datos personales</h2>
 <div class="row align-items-center">
-  <div class="col-sm-6 datos">
-    <p>
-      Nombre: Leonel Messi<button mat-flat-button class="btn-sm cambiar">
-        Cambiar
-      </button>
-    </p>
-    <p>
-      E-mail: LeoMessi10@gmail.com<button mat-flat-button class="cambiar">
-        Cambiar
-      </button>
-    </p>
-    <p>
-      Celular: +54 3512345678<button mat-flat-button class="cambiar">
-        Cambiar
-      </button>
-    </p>
-    <p>DNI: 24.123.456</p>
-    <p>Pais: Argentina</p>
-    <p>Nacionalidad: Argentina</p>
-    <p>Fecha de Nacimiento: 20/07/85</p>
+  <div class="col-12 col-sm-12 col-md-9">
+    <div class="datos">
+      <p>
+        Nombre: Leonel Messi
+        <button mat-flat-button class="btn-sm cambiar">
+          Cambiar
+        </button>
+      </p>
+      <p>
+        E-mail: LeoMessi10@gmail.com
+        <button mat-flat-button class="cambiar">
+          Cambiar
+        </button>
+      </p>
+      <p>
+        Celular: +54 3512345678
+        <button mat-flat-button class="cambiar">
+          Cambiar
+        </button>
+      </p>
+      <p>DNI: 24.123.456</p>
+      <p>Pais: Argentina</p>
+      <p>Nacionalidad: Argentina</p>
+      <p>Fecha de Nacimiento: 20/07/85</p>
+    </div>
   </div>
-  <div class="col-sm-6">
+  <div class="col-12 col-sm-12 col-md-3">
     <button mat-flat-button id="contraseña" routerLink="/wallet/password">
       Cambiar Contraseña
     </button>
