Encriptacion backend y union de front y back en usuarios

--- a/Frontend/src/app/users/login-page/login-page.component.html
+++ b/Frontend/src/app/users/login-page/login-page.component.html
@@ -30,7 +30,7 @@
       <mat-form-field class="full-width-input">
         <mat-label class="label-uno">Contraseña*</mat-label>
         <input
-          formControlName="password"
+          formControlName="contraseña"
           pattern="^[0-9a-zA-ZÀ-ÿ\s]{1,40}$"
           minlength="8"
           maxlength="15"
